syntax = "proto3";

option java_multiple_files = true;
option java_package = "de.mkammerer.grpcchat.protocol";
option java_outer_classname = "Protocol";

package grpcchat;

service Chat {
    rpc Register (RegisterRequest) returns (RegisterResponse) {
    }
    rpc Login (LoginRequest) returns (LoginResponse) {
    }
}

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    bool registered = 1;
}


message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    bool logged_in = 1;
    string token = 2;
}
